--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "league-api",
     "version": "1.0.0",
     "main": "src/server.js",
+    "type": "module",
     "scripts": {
         "start": "node -r dotenv/config src/server.js"
     },
@@ -10,6 +11,10 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "axios": "^1.9.0",
         "express": "^5.1.0"
+    },
+    "devDependencies": {
+        "dotenv": "^16.5.0"
     }
 }
